# checkers

checkers/: Makefile  Makefile.in  config.status  configure  configure.ac  configure.ac~  libtool
checkers/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
checkers/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  client.c  clientexe  config.h  server.c  serverexe
checkers/src/.deps/: client.Po  server.Po
checkers/src/client/: Makefile  Makefile.am  Makefile.in
checkers/src/client/inc/: client.h
checkers/src/client/lib/: Makefile  Makefile.am  Makefile.in  cdata.h  draw_board.c  draw_msg.c  recv_cdata.c  refresh_screen.c  screen.h  send_cdata.c
checkers/src/client/lib/.deps/: draw_board.Po  draw_msg.Po  recv_cdata.Po  refresh_screen.Po  send_cdata.Po
checkers/src/inc/: global.h
checkers/src/lib/: Makefile  Makefile.am  Makefile.in  var.c  var.h
checkers/src/lib/.deps/: var.Po
checkers/src/server/: Makefile  Makefile.am  Makefile.in
checkers/src/server/inc/: server.h
checkers/src/server/lib/: Makefile  Makefile.am  Makefile.in  check_kill.c  check_kill2.c  check_king.c  check_msg.c  check_msg.h  check_simple.c  give_up.c  help.c  hint.c  init.h  init_board.c  kill_list.h  kill_move.c  list_add.c  list_clear.c  list_data.c  list_pop.c  list_push.c  make_move.c  make_move.h  recv_sdata.c  sdata.h  send_sdata.c  set_board.c  simple_move.c  tie.c
checkers/src/server/lib/.deps/: check_kill.Po  check_kill2.Po  check_king.Po  check_msg.Po  check_simple.Po  give_up.Po  help.Po  hint.Po  init_board.Po  kill_move.Po  list_add.Po  list_clear.Po  list_data.Po  list_pop.Po  list_push.Po  make_move.Po  recv_sdata.Po  send_sdata.Po  set_board.Po  simple_move.Po  tie.Po
