noinst_LIBRARIES = libinit.a libcheck_msg.a libmake_move.a libsdata.a libkill_list.a
libinit_a_SOURCES = init_board.c init.h
libcheck_msg_a_SOURCES = check_msg.c help.c tie.c give_up.c hint.c check_msg.h
libmake_move_a_SOURCES = make_move.c check_king.c set_board.c simple_move.c check_simple.c kill_move.c check_kill2.c check_kill.c make_move.h
libsdata_a_SOURCES = send_sdata.c recv_sdata.c sdata.h
libkill_list_a_SOURCES = list_push.c list_pop.c list_add.c list_clear.c list_data.c kill_list.h